--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,18 @@
             <artifactId>junit</artifactId>
             <version>4.5</version>
             <scope>test</scope>
-        </dependency>      
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.5.6</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
