--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,16 @@
             <artifactId>commons-codec</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>resin-hessian</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>1.6</version>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
