--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,13 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.5.5</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
             <version>1.5.5</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.google.collections</groupId>
