added more image methods

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
             <artifactId>joda-time</artifactId>
             <version>1.6</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
