--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
             <groupId>com.caucho</groupId>
             <artifactId>resin-hessian</artifactId>
             <version>3.2.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
@@ -109,6 +110,12 @@
             <artifactId>spring-test</artifactId>
             <version>2.5.6</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>3.3.1.GA</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
