--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,16 @@
             <version>1.0.2.GA</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-full</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>ejb</artifactId>
+            <version>3.0-public_review</version>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
