--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,23 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>YES Library</name>
     <url>http://yestech.org</url>
+    <properties>
+        <tim.pipes.version>2.1.1-SNAPSHOT</tim.pipes.version>
+        <tim-annotations.version>1.4.0-SNAPSHOT</tim-annotations.version>
+    </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.terracotta.modules</groupId>
+            <artifactId>tim-pipes</artifactId>
+            <version>${tim.pipes.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.terracotta.modules</groupId>
+            <artifactId>tim-annotations</artifactId>
+            <version>${tim-annotations.version}</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
