updated license to LGPLv3

--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
     </organization>
     <licenses>
         <license>
-            <name>GPL</name>
-            <url>http://opensource.org/licenses/gpl-license.php</url>
+            <name>LGPLv3</name>
+            <url>http://opensource.org/licenses/lgpl-3.0.html</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
