--- a/pom.xml
+++ b/pom.xml
@@ -43,18 +43,18 @@
         </developer>
     </developers>
     <properties>
-        <tim.pipes.version>2.1.1</tim.pipes.version>
+        <tim.pipes.version>2.1.0</tim.pipes.version>
         <tim-annotations.version>1.4.0</tim-annotations.version>
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.terracotta.modules.beta</groupId>
+            <groupId>org.terracotta.modules</groupId>
             <artifactId>tim-pipes</artifactId>
             <version>${tim.pipes.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.terracotta.modules.beta</groupId>
+            <groupId>org.terracotta.modules</groupId>
             <artifactId>tim-annotations</artifactId>
             <version>${tim-annotations.version}</version>
             <scope>provided</scope>
