--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -7,10 +6,11 @@
     <packaging>jar</packaging>
     <version>1.1.0-SNAPSHOT</version>
     <name>YES Library</name>
-    <url>http://yestech.org</url>
+    <url>http://yestech.org/sites/yeslib/</url>
     <scm>
-        <connection>scm:git:http://github.com/yestech/yeslib/tree/master</connection>
-        <developerConnection>scm:git:http://github.com/yestech/yeslib/tree/master</developerConnection>
+        <connection>scm:git:git://github.com/yestech/yeslib.git</connection>
+        <developerConnection>scm:git:git://github.com/yestech/yeslib.git</developerConnection>
+        <url>http://github.com/yestech/yeslib/tree/master</url>
     </scm>
     <organization>
         <name>YES Technology Association</name>
@@ -27,7 +27,7 @@
         <developer>
             <id>artie</id>
             <name>Artie Copeland</name>
-            <email>artie@yestech.org</email>
+            <email>http://mailhide.recaptcha.net/d?k=013dif-8KmF_OR5-Zs49rn9w==&amp;c=ZDwNN9ZwWomHpMAaLEW0Rt3HB4aATO6AM20eeZNxLS4=</email>
             <roles>
                 <role>architect</role>
                 <role>developer</role>
@@ -305,6 +305,25 @@
             </build>
         </profile>
     </profiles>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.6</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.4.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.1.2</version>
+            </plugin>
+        </plugins>
+    </reporting>
     <repositories>
         <repository>
             <id>yestech-snapshots</id>
@@ -350,6 +369,10 @@
         </pluginRepository>
     </pluginRepositories>
     <distributionManagement>
+        <site>
+            <id>yestech.org</id>
+            <url>file:////wwwhome/yestech.org/sites/${artifactId}</url>
+        </site>
         <repository>
             <id>yestech-releases</id>
             <name>YES Technology Release Repository</name>
