--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.yestech</groupId>
     <artifactId>yeslib</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <name>YES Library</name>
     <url>http://yestech.org/sites/yeslib/</url>
     <description></description>
