--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
     <groupId>org.yestech</groupId>
     <artifactId>yeslib</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.0</version>
+    <version>1.2.0-SNAPSHOT</version>
     <name>YES Library</name>
     <url>http://yestech.org/sites/yeslib/</url>
     <description></description>
     <parent>
         <groupId>org.yestech</groupId>
         <artifactId>yessuperpom</artifactId>
-        <version>1.1.0</version>
+        <version>1.2.0</version>
     </parent>
     <scm>
         <connection>scm:git:git://github.com/yestech/yeslib.git</connection>
