--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,14 @@
     <properties>
         <tim.pipes.version>2.1.0</tim.pipes.version>
         <tim-annotations.version>1.4.0</tim-annotations.version>
+        <hazelcast.version>1.7.1</hazelcast.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast</artifactId>
+            <version>${hazelcast.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.terracotta.modules</groupId>
             <artifactId>tim-pipes</artifactId>
