--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
     <dependencies>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
+            <artifactId>jaxrs-api</artifactId>
+            <version>${resteasy.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
             <version>${resteasy.version}</version>
             <exclusions>
@@ -189,12 +195,6 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>jaxrs-api</artifactId>
-            <version>1.0.2.GA</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-search</artifactId>
             <version>3.1.0.GA</version>
@@ -204,12 +204,6 @@
             <groupId>cglib</groupId>
             <artifactId>cglib-full</artifactId>
             <version>2.0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>ejb</artifactId>
-            <version>3.0-public_review</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
