updated EhCacheController so you can load cache configs from the file system or classpath. It now first looks on the file system if the config is not found it will look in the classpath.
Added unit tests for the EhCacheController class

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,14 @@
                 <role>developer</role>
             </roles>
         </developer>
+        <developer>
+            <id>crowtopia</id>
+            <name>Greg Crow</name>
+            <email>crowos@gmail.com</email>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
     </developers>
     <properties>
         <tim.pipes.version>2.1.0</tim.pipes.version>
